--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,34 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  app:
+    author: "Erik Michaels-Ober"
+    description: "A Ruby on Rails application that demonstrates how to use the Sign in with Twitter workflow using the twitter gem and OmniAuth."
+    description_html: "A %{ruby_on_rails} application that demonstrates how to use the %{sign_in_with_twitter} workflow using the %{twitter_gem} and %{omniauth}."
+    name: "Sign in with Twitter"
+  button:
+    sign_in: "Sign in with Twitter"
+    sign_out: "Sign out"
+  help:
+    sign_in: "Start by pressing this button to authenticate with Twitter."
+  link:
+    omniauth_html: "<a href=\"https://rubygems.org/gems/omniauth\">OmniAuth</a>"
+    ruby_on_rails_html: "<a href=\"http://rubyonrails.org/\">Ruby on Rails</a>"
+    sign_in_with_twitter_html: "<a href=\"https://dev.twitter.com/docs/auth/sign-twitter\">Sign in with Twitter</a>"
+    twitter_gem_html: "<a href=\"https://rubygems.org/gems/twitter\">twitter gem</a>"
+  nav:
+    build_status: "Build Status"
+    dependency_status: "Dependency Status"
+    documentation: "Documentation"
+    resources: "Resources"
+    sash: "Fork me on GitHub"
+    source_code: "Source Code"
+  th:
+    location: "Location"
+    tweets: "Tweets"
+    following: "Following"
+    followers: "Followers"
+    favorites: "Favorites"
+    listed: "Listed"
+  time:
+    ago: "%{time} ago"
+  via:
+    source: "via %{source}"
